# wagtail-headless-docker

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
_vue/: Dockerfile
django/: Dockerfile  nginx.example
django/website/: .gitignore  pyproject.toml
django/website/requirements/: production.txt  req_base.txt
django/website/wagtail_vue/apps/pages/: models.py
django/website/wagtail_vue/apps/pages/migrations/: 0001_initial.py
django/website/wagtail_vue/wagtail_vue/settings/: dev.py  production.py  settings_base.py
gridsome/: Dockerfile  gridsome.config.js  package.json
gridsome/src/pages/: Index.vue
